fix video scrolling on mobile

--- a/src/components/tools/RecommandVideo/RecommandVideo.scss
+++ b/src/components/tools/RecommandVideo/RecommandVideo.scss
@@ -5,6 +5,7 @@
 
   .sticky {
     // position
+    position: absolute;
     top: 5rem !important;
   }
 
@@ -17,5 +18,13 @@
     // box
     width: 100%;
     height: 65vh;
+  }
+}
+
+@media (max-width: 992px) {
+  .RecommandVideo {
+    .sticky {
+      position: initial !important;
+    }
   }
 }
